<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/inicial_background"
    android:gravity="center">

        <LinearLayout
            android:layout_marginTop="250dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/logo"
                android:text="@string/NomeApp"
                android:textColor="@color/white"
                android:textSize="70sp"></TextView>
            <TextView
                android:textStyle="italic"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="@font/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Slogan"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_gravity="center">



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/btnLogin"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:backgroundTint="@color/white"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:text="@string/entrar"
                    android:textColor="#7590AA"
                    ></TextView>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/btnCadastro"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/outline_button"
                android:padding="10dp"
                android:text="@string/cadastre_se"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"></TextView>
        </LinearLayout>

</LinearLayout>